[package]
name = "cortex-m-asyncrt"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A minimal async runtime for Cortex-M devices."
repository = "https://github.com/RationalAsh/cortex-m-asyncrt"
homepage = "https://github.com/RationalAsh/cortex-m-asyncrt"
readme = "README.md"
keywords = ["cortex-m", "async", "runtime", "embedded", "no_std"]
categories = ["embedded", "no-std", "asynchronous"]
exclude = [".zed"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7.3" }
panic-halt = "0.2.0"
fugit = { version = "0.3" }
embedded-alloc = "0.6.0"
crossbeam-queue = { version = "0.3.11", default-features = false, features = [
    "alloc",
] }
conquer-once = { version = "0.4.0", default-features = false }
